--- a/django/megafon/index/templates/index.html
+++ b/django/megafon/index/templates/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="{% static 'libs/fancybox/jquery.fancybox.css' %}" />
     <link rel="stylesheet" href='{% static "css/main.css" %}'>
     <title>{{title}}</title>
 </head>
@@ -18,8 +17,8 @@
                 <li><a href="/authors/">Авторы</a></li>
             </ul>
             <ul class="add">
-                <li><a href="#" id="add_book">добавить книгу</a></li>
-                <li><a href="#" id="add_author">добавить автора</a></li>
+                <li><a href="/books/add/" data-action='getForm' id="add_book">добавить книгу</a></li>
+                <li><a href="/authors/add/" data-action='getForm' id="add_author">добавить автора</a></li>
             </ul>
             <ul class="logo">
                 <li class="crcl"></li>
@@ -37,19 +36,75 @@
     <div class="content">
         {% block title %}
             <h1 class="title">Главная страницы</h1>
+            <div class="books">
+                <ul>
+                    <li class="book">
+                        <a href="#">
+                            <div class="book-img" style="background-image: url('/static/img/images.jpeg')"></div>
+                            <div class="t-book">Книга 1</div>
+                            <ol>
+                                <li>Автор: Автор 1</li>
+                                <li>Серия: Серия 1</li>
+                            </ol>
+                            <div class="description">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe, facilis! Vero sunt numquam praesentium voluptatem!
+                            </div>
+                        </a>
+                    </li>
+                    <li class="book">
+                        <a href="#">
+                            <div class="book-img" style="background-image: url('/static/img/images.jpeg')"></div>
+                            <div class="t-book">Книга 2</div>
+                            <ol>
+                                <li>Автор: Автор 1</li>
+                                <li>Серия: Серия 1</li>
+                            </ol>
+                            <div class="description">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae provident asperiores error eveniet molestias aspernatur ducimus obcaecati. Veritatis tempora, repudiandae quidem aut, nam vel eius maiores accusamus facilis quaerat excepturi id sapiente.
+                            </div>
+                        </a>
+                    </li>
+                    <li class="book">
+                        <a href="#">
+                            <div class="book-img" style="background-image: url('/static/img/images.jpeg')"></div>
+                            <div class="t-book">Книга 3</div>
+                            <ol>
+                                <li>Автор: Автор 1</li>
+                                <li>Серия: Серия 1</li>
+                            </ol>
+                            <div class="description">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe, facilis! Vero sunt numquam praesentium voluptatem!
+                            </div>
+                        </a>
+                    </li>
+                    <li class="book">
+                        <a href="#">
+                            <div class="book-img" style="background-image: url('/static/img/images.jpeg')"></div>
+                            <div class="t-book">Книга 4</div>
+                            <ol>
+                                <li>Автор: Автор 1</li>
+                                <li>Серия: Серия 1</li>
+                            </ol>
+                            <div class="description">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe, facilis! Vero sunt numquam praesentium voluptatem!
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
 
         {% endblock title %}
         {% block content %}
 
         {% endblock content %}
     </div>
+    <div id="forms_result"></div>
     <footer>
 
     </footer>
 </body>
 <!-- jquery -->
 <script src="{% static 'libs/jquery-3.3.1.min.js' %}"></script>
-<script src="{% static 'libs/fancybox/jquery.fancybox.js' %}"></script>
 <!-- Common -->
 <script src="{% static 'js/common.js' %}"></script>
 </html>
