--- a/django/megafon/src/less/main.less
+++ b/django/megafon/src/less/main.less
@@ -5,6 +5,15 @@
 @megafon_green: #4cb955;
 @megafon_fiolet: #721982;
 .reset();
+.hidden{
+    display: none;
+}
+p{
+    margin-block-start: 0px;
+    margin-block-end: 0px;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
 body{
     display: flex;
     flex-direction: column;
@@ -24,8 +33,8 @@ body{
         max-width: 1200px;
         width: 100%;
         display: flex;
-        justify-content: space-between;
-        
+        justify-content: space-around;
+        flex-wrap: wrap;
         ul, ul.menu{
             display: flex;
             // max-width: 100%;
@@ -94,14 +103,9 @@ body{
 // Action Panel
 .action_panel{
     top: 40px;
-    height: 50px;
-    width: 700px;
+    height: 57px;
+    width: 100%;
     background: @megafon_green;
-    border: 1px solid @megafon_fiolet;
-    border-bottom-right-radius: 5px;
-    border-bottom-left-radius: 5px;
-    margin: 0 auto;
-    position: absolute;
     form{
         padding: 10px;
         width: 90%;
@@ -124,10 +128,12 @@ body{
 }
 // CONTENT
 .content{
-    position: relative;
+    // position: relative;
+    margin: 50px 0px 50px 0px;
     padding: 10px;
-    width: 1200px;
-    top: 60px;
+    max-width: 1200px;
+    width: 100%;
+    // top: 60px;
     border: 1px solid @border-color;
     h1{
         max-width: 200px;
@@ -137,4 +143,111 @@ body{
         padding: 10px;
         border-bottom: 2px solid @megafon_fiolet;
     }
+    .books, .authors{
+        margin-top: 50px;
+        ul{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            li.book, li.author{
+                max-width: 250px;
+                width: 100%;
+                margin: 10px;
+                padding: 10px;
+                box-shadow: 0px 0px 11px -1px #000000;
+                a{
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    text-decoration: none;
+                    color: #000;
+                    .book-img, .author-img{
+                        width: 100%;
+                        height: 150px;
+                        background-size: contain;
+                        background-repeat: no-repeat;
+                        background-position: center;
+                    }
+                    .t-book, .t-author{
+                        padding: 5px;
+                        font-size: 24px;
+                        font-weight: 700;
+                    }
+                    .t-author{
+                        text-align: center;
+                    }
+                    .description{
+                        padding: 5px;
+                        text-align: justify;
+                    }
+                    ol{
+                        padding-inline-start: 0px;
+                        margin: 3px;
+                        font-weight: 600;
+                    }
+                }
+            }
+        }
+    }
+}
+footer{
+    width: 100%;
+    height: 70px;
+    background: @border-color;
+}
+.item-add{
+    max-width: 300px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 10px;
+    border: 1px solid @border-color;
+    .close{
+        text-decoration: none;
+        display: block;
+        width: 100%;
+        text-align: right;
+        color: #000;
+    }
+    h3{
+        padding: 20px;
+        text-align: center;
+        text-transform: uppercase;
+    }
+    form{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 0 auto;
+        input{
+            padding: 5px;
+            margin: 5px;
+            max-width: 200px;
+            width: 100%;
+            display: block;
+            border-radius: 5px;
+            border: 1px solid @border-color;
+        }
+        button{
+            margin: 5px;
+            padding: 10px;
+            background: @megafon_green;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+
+        }
+        textarea{
+            width: 250px;
+            margin: 0 auto;
+        }
+    }
+
+}
+.item-add{
+    z-index: 999;
+    position: fixed;
+    left: 38%;
+    top: 0px;
+    background: #fff;
+    box-shadow: 0px 0px 11px -1px #000000;
 }
