Поправил отображение форм

--- a/django/megafon/src/less/main.less
+++ b/django/megafon/src/less/main.less
@@ -221,7 +221,6 @@ footer{
         input{
             padding: 5px;
             margin: 5px;
-            max-width: 200px;
             width: 100%;
             display: block;
             border-radius: 5px;
@@ -237,8 +236,19 @@ footer{
 
         }
         textarea{
-            width: 250px;
+            // width: 250px;
             margin: 0 auto;
+            padding: 5px;
+        }
+        select{
+            padding: 5px;
+            width: 100%;
+            margin: 10px;
+        }
+        p{
+            width: 100%;
+            display: flex;
+            flex-wrap: wrap;
         }
     }
 
