Комментарии + правка поля описания

--- a/django/megafon/src/less/main.less
+++ b/django/megafon/src/less/main.less
@@ -239,6 +239,7 @@ footer{
             // width: 250px;
             margin: 0 auto;
             padding: 5px;
+            height: 50px;
         }
         select{
             padding: 5px;
