--- a/django/megafon/index/templates/books.html
+++ b/django/megafon/index/templates/books.html
@@ -2,28 +2,16 @@
 {% block title %}
 <h1 class="title">Книги</h1>
 {% endblock title %}
+{% block search %}
+<div class="action_panel">
+    <form action="" method="get">
+        <label for="search">Поиск</label>
+        <input type="search" name="search" id="books" onkeyup="window.search(this.value, this.id);" placeholder="Введите название книги или имя, фамилию автора">
+    </form>
+</div>
+{% endblock search %}
 {% block content %}
-    <div class="books">
-        <ul>
-            {% for item in items %}
-            <li class="book">
-                <a href="/books/edit/{{item.pk}}" data-action='getForm'>
-                    <div class="book-img" style='background-image: url("/{{item.image}}")'></div>
-                    <div class="t-book">{{item.name}}</div>
-                    <ol>
-                        <li>Авторы: 
-                            {% for author in item.author.all %}
-                                <p>{{author}}</p>
-                            {% endfor %}
-                        </li>
-                        <li>Серия: {{item.series}}</li>
-                    </ol>
-                    <div class="description">
-                        {{item.description}}
-                    </div>
-                </a>
-            </li>
-            {% endfor %}
-        </ul>
-    </div>
+<div id="ajax_result">
+    {% include 'books_ajax.html' %}
+</div>
 {% endblock content %}
