--- a/django/megafon/src/less/main.less
+++ b/django/megafon/src/less/main.less
@@ -15,11 +15,11 @@ p{
     margin-inline-end: 0px;
 }
 body{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    height: 100%;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: space-between;
+    // align-items: center;
+    // height: 100vh;
 }
 // HEADER
 .header{
@@ -31,6 +31,7 @@ body{
     aside{
         display: flex;
         max-width: 1200px;
+        min-height: 50px;
         width: 100%;
         display: flex;
         justify-content: space-around;
@@ -128,13 +129,12 @@ body{
 }
 // CONTENT
 .content{
-    // position: relative;
-    margin: 50px 0px 50px 0px;
-    padding: 10px;
+    margin: 10px auto;
     max-width: 1200px;
     width: 100%;
-    // top: 60px;
     border: 1px solid @border-color;
+    box-sizing: border-box;
+    min-height: 100vh;
     h1{
         max-width: 200px;
         margin: 0 auto;
@@ -145,6 +145,15 @@ body{
     }
     .books, .authors{
         margin-top: 50px;
+        h3{
+            max-width: 200px;
+            margin: 10px auto;
+            text-align: center;
+            text-transform: uppercase;
+            padding: 10px;
+            border-bottom: 2px solid @megafon_green;
+
+        }
         ul{
             display: flex;
             flex-wrap: wrap;
@@ -191,6 +200,7 @@ body{
     }
 }
 footer{
+    align-self: flex-end;
     width: 100%;
     height: 70px;
     background: @border-color;
