--- a/django/megafon/static/css/main.css
+++ b/django/megafon/static/css/main.css
@@ -139,19 +139,6 @@ p {
   margin-inline-end: 0px;
 }
 
-body {
-  display: -webkit-box;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  flex-direction: column;
-  -webkit-box-pack: justify;
-  justify-content: space-between;
-  -webkit-box-align: center;
-  align-items: center;
-  height: 100%;
-}
-
 .header {
   width: 100%;
   display: -webkit-box;
@@ -164,6 +151,7 @@ body {
 
 .header aside {
   max-width: 1200px;
+  min-height: 50px;
   width: 100%;
   display: -webkit-box;
   display: flex;
@@ -280,11 +268,12 @@ body {
 }
 
 .content {
-  margin: 50px 0px 50px 0px;
-  padding: 10px;
+  margin: 10px auto;
   max-width: 1200px;
   width: 100%;
   border: 1px solid #333333;
+  box-sizing: border-box;
+  min-height: 100vh;
 }
 
 .content h1 {
@@ -299,6 +288,16 @@ body {
 .content .books,
 .content .authors {
   margin-top: 50px;
+}
+
+.content .books h3,
+.content .authors h3 {
+  max-width: 200px;
+  margin: 10px auto;
+  text-align: center;
+  text-transform: uppercase;
+  padding: 10px;
+  border-bottom: 2px solid #4cb955;
 }
 
 .content .books ul,
@@ -389,6 +388,7 @@ body {
 }
 
 footer {
+  align-self: flex-end;
   width: 100%;
   height: 70px;
   background: #333333;
